--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,8 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-ruby@v1
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          ruby-version: '3.0'
+      - run: ruby first.rb
