--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,11 +2,14 @@ name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 jobs:
-  check-bats-version:
+  run-ruby-file:
     runs-on: ubuntu-latest
     steps:
+      - name: Step 1
       - uses: actions/checkout@v3
+      - name: Step 2
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: '3.0'
+      - uses: actions/
       - run: ruby first.rb
