Changing to ruby machine

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: '3.0'
-      - uses: actions/
+      - name: Run Code
       - run: ruby first.rb
